--- a/tarjeta.html
+++ b/tarjeta.html
@@ -37,7 +37,7 @@
             const params = new URLSearchParams(window.location.search);
             return {
                 t1: params.get('t1') || 'Queridos amigos',
-                t2: params.get('t2') || 'María y Pedro',
+                t2: params.get('t2') || 'Nicole y Pedro',
             };
         }
         
